# diffstock-tui

./: .env.example  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  STRATEGY_GUIDE.md  model_features.json  model_weights.safetensors  portfolio_test_output.txt  start_directml_webui.bat  tmp_futu_status_raw.json  training_log_capture.json
.cache/: AAPL_1y.json  AAPL_1y_polygon.json  AAPL_5y_polygon.json  AMD_1y.json  AMD_1y_polygon.json  AMZN_1y_polygon.json  AMZN_5y_polygon.json  ARKK_5y_polygon.json  COPX_10y.json  COPX_5y_polygon.json  DIA_5y_polygon.json  ETN_10y.json  ETN_5y_polygon.json  GLD_1y.json  GLD_1y_polygon.json  GLD_5y.json  GOOGL_1y.json  GOOGL_1y_polygon.json  GOOGL_5y_polygon.json  IAU_10y.json  IAU_1y.json  IAU_1y_polygon.json  IAU_5y_polygon.json  IBM_1y_polygon.json  INVALID_TICKER_123456_1y_polygon.json  IWM_5y.json  META_1y.json  META_1y_polygon.json  META_5y_polygon.json  MSFT_10y.json  MSFT_1y.json  MSFT_1y_polygon.json  MSFT_5y_polygon.json  MU_1y_polygon.json  NVDA_10y.json  NVDA_1y.json  NVDA_1y_polygon.json  NVDA_5y_polygon.json  ORCL_1y_polygon.json  QQQI_5y_polygon.json  (+34 more)
docs/: Stock Prediction App.md
log/: _tmp_futu_status.json  backtest_runtime_20260307_180241.jsonl  backtest_runtime_20260308_231817.jsonl  backtest_runtime_20260308_232207.jsonl  backtest_runtime_20260309_084059.jsonl  backtest_runtime_20260309_102547.jsonl  backtest_runtime_20260309_112617.jsonl  backtest_runtime_20260309_115117.jsonl  backtest_runtime_20260309_150541.jsonl  backtest_runtime_20260309_171124.jsonl  backtest_runtime_20260309_191355.jsonl  (+307 more)
src/: app.rs  (+16 more)
(+2930 files in other folders)
