[package]
name = "diffstock-tui"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
directml = ["dep:ort"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.41.1", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.93"
chrono = "0.4.38"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
candle-core = "0.8.0"
candle-nn = "0.8.0"
rand_distr = "0.4.3"
clap = { version = "4.5.53", features = ["derive"] }
safetensors = "0.7.0"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wgpu"] }
egui = "0.29"
egui_plot = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
rayon = "1.10"
num_cpus = "1.16"
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
dotenvy = "0.15"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic", "download-binaries", "copy-dylibs", "tls-rustls", "directml"], optional = true }
